# deep_research

./: .env.example  .gitignore  DATA_COMMONS_GUIDE.md  DEMO.md  README.md  UI_UX_IMPROVEMENTS.md  cli.py  demo.py  example.py  pyproject.toml  start.sh  web_app.py
notebooks/: 1_scoping.ipynb  2_research_agent.ipynb  3_research_agent_mcp.ipynb  4_research_supervisor.ipynb  5_full_agent.ipynb
src/deep_research_from_scratch/: clarification_chatbot.py  cost_tracker.py  cost_tracking_wrapper.py  feedback_system.py  main.py  multi_agent_supervisor.py  prompts.py  research_agent.py  research_agent_full.py  research_agent_mcp.py  research_agent_mcp_enhanced.py  research_agent_scope.py  state_scope.py  utils.py  virtual_assistant.py
src/deep_research_from_scratch/files/: research_test_summary.md
